--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,7 @@ button:active button:hover .btn:active,
 /* Start About Area */
 
 .about-area {
-  padding: 8rem 5rem;
+  padding: 4rem 5rem;
 }
 
 .site-main .about-area .about-title h2 > span {
